syntax = "proto3";

option csharp_namespace = "GpioDevicesService";

import "google/protobuf/empty.proto";

package greet;

// The light control service definition.
service Light {
  // Get current state
  rpc GetState (google.protobuf.Empty) returns (LightReply);

  // Turn on light
  rpc TurnOnLight (google.protobuf.Empty) returns (LightReply);

  // Turn off light
  rpc TurnOffLight (google.protobuf.Empty) returns (LightReply);

  // Dim light
  rpc DimLight (google.protobuf.Empty) returns (LightReply);

  // Brighten light
  rpc BrightenLight (google.protobuf.Empty) returns (LightReply);
}

// The response message containing the brightness.
message LightReply {
  int32 brightness = 1;
  string mode = 2;
}
